# posx-official-backend

./: .cursorrules  .editorconfig  .env.example  .gitignore  .markdownlint.json  00_DELIVERY_CHECKLIST.md  AUTH0_CONFIG.md  AUTH0_FINAL_STATUS.md  AUTH0_TEST_SUMMARY.md  COMPLETE_REFACTOR_SUMMARY.md  Caddyfile  DEPLOY_DEMO_SUMMARY.md  DOCS_REFACTOR_FINAL.md  DOCS_REFACTOR_SUMMARY.md  ENV_FINAL_CHECKLIST.md  ENV_VARIABLES_PHASE_C.md  EXECUTE_DEPLOY_NOW.md  FINAL_REFACTOR_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INIT_COMPLETE.md  MERGE_COMPLETE.md  MERGE_READY_SUMMARY.md  Makefile  P0_P1_CHECKLIST.md  P1_COMPLETION_SUMMARY.md  PHASE_C_ACCEPTANCE.md  PHASE_C_IMPLEMENTATION.md  PHASE_E_READY_TO_DEPLOY.md  POSX_Framework_v3_README.md  POSX_System_Specification_v1_0_0.md  RAILWAY_FINAL_CHECKLIST.md  README.md  README_RAILWAY_DEPLOYMENT.md  REFACTOR_COMPLETE.md  RETOOL_BACKEND_SUPPLEMENTS.md  RETOOL_SETUP_MANUAL.md  VERSION  YOUR_ENV_CONFIG.md  deploy_demo_oneclick.sh  (+8 more)
backend/: Dockerfile  Dockerfile.prod  ENV_SETUP_WIZARD.md  IMPLEMENTATION_REPORT_20251110.md  MIGRATION_GUIDE_COMMISSION_PLANS.md  PHASE_C_PLAN.md  PHASE_C_QUICKSTART.md  check_env.py  create_test_sites.py  diagnose_issuer.py  env.demo.txt  env.development.txt  env.production.txt  phase_c_acceptance.sh  pyproject.toml  pytest.ini  start_dev.bat  test_auth0_final.py  verify_setup.py
backend/config/: __init__.py  celery.py  urls.py  wsgi.py
backend/fixtures/: README.md  seed_commission_plans.json  seed_sites.json
backend/migrations_backup_20251108_132402/: agents_0001_initial.py  allocations_0001_initial.py  commission_plans_0001_initial.py  commissions_0001_initial.py  core_0001_initial.py  core_0002_create_initial_schema.py  orders_0001_initial.py  orders_snapshots_0001_initial.py  sites_0001_initial.py  tiers_0001_initial.py  users_0001_initial.py  users_0002_wallet_address_unique.py  webhooks_0001_initial.py
backend/requirements/: base.txt  local.txt  production.txt
backend/scripts/: README.md  check_auth0_setup.py  check_db_schema.py  check_env_loading.py  check_env_simple.py  create_admin_user.py  create_phase_e_config.py  decode_token.py  load_error_codes.py  test_e2e_commission_flow.py
backend/seed/: error_codes.json
backend/tests/: __init__.py  test_auth0_config.py  test_auth0_simple.py  test_auth0_token.py  test_jwt_direct.py  test_phase_d_webhooks.py  test_webhooks_stripe.py
(+281 files in other folders)
