[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = ["migrations", ".venv", "venv"]
known_django = ["django"]
known_first_party = ["config", "apps"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pylint.messages_control]
disable = [
  "C0111",  # missing-docstring
  "C0103",  # invalid-name
  "R0903",  # too-few-public-methods
]

[tool.pylint.format]
max-line-length = 88

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov=apps",
  "--cov-report=html",
  "--cov-report=term-missing:skip-covered",
]
testpaths = ["backend/apps"]

[tool.coverage.run]
source = ["apps"]
omit = [
  "*/migrations/*",
  "*/tests/*",
  "*/__init__.py",
  "*/config/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.local"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "posx-framework"
version = "1.0.0"
description = "Multi-site token presale platform with RLS"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "POSX Team"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "Django>=4.2.7",
  "djangorestframework>=3.14.0",
  "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
  "black>=23.12.0",
  "isort>=5.13.2",
  "flake8>=6.1.0",
  "mypy>=1.7.1",
  "pytest>=7.4.3",
  "pytest-django>=4.7.0",
  "pytest-cov>=4.1.0",
]
